# qr_live_protocol

./: .gitignore  ASSESSMENT.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  ISA.md  LICENSE  QUICKSTART.md  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  run_all.py  setup.py  setup.sh
docs/: API.md  AUTHENTICATION_CHALLENGES.md  CONFIGURATION.md  CONTRIBUTING.md  FAQ.md  FEATURE_REQUESTS.md  INDEX.md  INSTALLATION.md  README.md  STREAMING.md
examples/: comprehensive_demo.py  error_recovery_demo.py  integration_patterns.py  livestream_demo.py  thin_orchestrator.py
output/demo_verification/: qr_001_data.json  qr_002_data.json  qr_003_data.json
output/examples/comprehensive_demo/qr_codes/: qr_001_data.json  qr_002_data.json  qr_003_data.json
output/examples/livestream_demo/: demo_identity.json
qr_live_protocol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: .cursorrules  AGENTS.md  README.md  __init__.py  async_core.py  blockchain_verifier.py  cli.py  config.py  core.py  error_recovery.py  identity_manager.py  qr_generator.py  serializer.py  time_provider.py  trust.py  web_server.py
src/crypto/: README.md  __init__.py  encryptor.py  exceptions.py  hmac.py  key_manager.py  signer.py
src/time_provider/: README.md
src/web_server/: README.md
templates/: improve.html  index.html  viewer.html
tests/: __init__.py  conftest.py  test_async_core.py  test_blockchain_verifier.py  test_blockchain_verifier_extended.py  test_cli_extended.py  test_config_env.py  test_coverage_gaps.py  test_error_recovery_extended.py  test_identity_manager_extended.py  test_package_metadata.py  test_qr_generator.py  test_qr_generator_extended.py  test_qr_generator_internals.py  test_time_provider_extended.py  test_trust_extended.py  test_v12_features.py  test_v14_features.py  test_web_server_extended.py
tests/test_core/: test_core_extended.py  test_identity_manager.py  test_qrdata_forward_compat.py  test_qrlive_protocol.py
tests/test_crypto/: test_encryptor.py  test_key_manager.py  test_signer.py  test_signer_extended.py
tests/test_error_recovery/: test_circuit_breaker.py
tests/test_integration/: test_cli.py  test_full_workflow.py  test_improvement_dashboard.py  test_web_server.py
